# marcel

./: .dockerignore  .env  .gitignore  CLAUDE.md  Dockerfile  LICENSE  MIGRATION_PLAN.md  Makefile  NUC_QUICKSTART.md  README.md  SESSION_SUMMARY.md  SETUP.md  TODO.md  character.md  conftest.py  docker-compose.dev.yml  docker-compose.yml  install.sh  mkdocs.yml  pyproject.toml  redeploy.sh  test_v2.sh
.claude/: settings.json  statusline.sh
.claude/agents/: code-reviewer.md  plan-verifier.md  pre-close-verifier.md  security-auditor.md
.claude/hooks/: guard-restricted.py  issue-reminder.py
.claude/rules/: closing-commit-purity.md  data-boundaries.md  debugging.md  docs-in-impl.md  git-staging.md  integration-pairs.md  role-gating.md  self-modification.md  toolkit-skill-pairs.md
.claude/scripts/: issue-task
.claude/skills/: icloud
.claude/skills/finish-issue/: SKILL.md
.claude/skills/new-issue/: SKILL.md
.claude/skills/parallel-issue/: SKILL.md
.marcel/: MARCEL.md
.marcel/skills/banking/: SKILL.md
.marcel/skills/browser/: SKILL.md
.marcel/skills/developer/: SKILL.md
.marcel/skills/docker/: SKILL.md
.marcel/skills/icloud/: SKILL.md
.marcel/skills/plex/: SETUP.md  SKILL.md
.marcel/skills/settings/: SKILL.md
data/users/shaun/: profile.md
deploy/: marcel-dev-redeploy.path.tmpl  marcel-dev-redeploy.service.tmpl  marcel-redeploy.path.tmpl  marcel-redeploy.service.tmpl  marcel.service.tmpl  setup.sh  teardown.sh
docs/: CLAUDE.md  a2ui-components.md  agents.md  architecture.md  artifacts.md  channels.md  claude-code-setup.md  cli.md  habitats.md  index.md  integration-banking.md  integration-kbc.md  integration-news.md  jobs.md  local-llm.md  model-tiers.md  plugins.md  routing.md  self-modification.md  skills.md  storage.md  subagents.md  web.md
docs/channels/: telegram.md
docs/design/: blocks.txt  mascot.txt  palette.json
docs/extra/: tweaks.css
project/: CLAUDE.md  CODING_STANDARDS.md  FEATURE_WORKFLOW.md  VERSIONING.md  lessons-learned-archive.md  lessons-learned.md
project/issues/: CLAUDE.md  GIT_CONVENTIONS.md  TEMPLATE.md
project/issues/closed/: ISSUE-001-marcel-core-server-scaffold.md  ISSUE-002-flat-file-storage.md  ISSUE-003-agent-loop.md  ISSUE-004-cmd-tool-skills-registry.md  ISSUE-005-watchdog-git-rollback.md  ISSUE-006-marcel-cli-tui.md  ISSUE-007-cli-overhaul-scrolling-repl.md  ISSUE-008-cli-installer-versioning.md  ISSUE-009-fixed-header-live-resize.md  ISSUE-010-textual-cli-rewrite.md  ISSUE-011-telegram-channel.md  ISSUE-012-telegram-reliability-fixes.md  ISSUE-013-fix-telegram-agent-hang.md  ISSUE-014-sop-telegram-issue-tracking.md  ISSUE-015-feat-icloud-integration.md  ISSUE-016-clean-commit-workflow-sop.md  ISSUE-017-fixup-amendment-sop.md  ISSUE-018-telegram-coder-mode.md  ISSUE-019-cleanup-icloud-credentials-from-env-local.md  ISSUE-020-dockerize-self-restart.md  ISSUE-021-security-hardening.md  ISSUE-022-cors-rate-limiting.md  ISSUE-023-redesign-skill-system.md  ISSUE-024-agent-reimplementation-memory-architecture.md  ISSUE-025-cli-parity-claude-code.md  ISSUE-026-agui-rich-content.md  ISSUE-027-systemd-deploy-infrastructure.md  ISSUE-028-kbc-banking-integration.md  ISSUE-029-multi-bank-support.md  ISSUE-030-view-in-app-fixes.md  ISSUE-032-move-skills-to-marcel-folder.md  ISSUE-033-marcel-md-system.md  ISSUE-034-restructure-marcel-core-layout.md  ISSUE-035-claude-code-interactive-session.md  ISSUE-036-api-key-model-selection.md  ISSUE-037-user-roles-admin-cli.md  ISSUE-038-pydantic-settings-config.md  ISSUE-039-rename-integration-skill-param-to-id.md  ISSUE-040-cli-scrolling-mouse-selection.md  (+88 more)
project/plans/: architecture-overview.md
scripts/: migrate_lessons.py  query_lessons.py  redeploy.sh  seed_jobs.py  setup.sh  teardown.sh  zoo-setup.sh
src/marcel_cli/: Cargo.toml  __init__.py  app.py  chat.py  config.py  main.py  mascot.py
src/marcel_cli/src/: app.rs  chat.rs  config.rs  header.rs  main.rs  print.rs  render.rs  state.rs  tui.rs  ui.rs
src/marcel_core/: __init__.py  config.py  main.py  rate_limit.py  tracing.py
src/web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
tests/agents/: test_loader.py
tests/browser/: test_loader_packages.py  test_manager.py  test_security.py
tests/channels/: __init__.py  test_websocket_adapter.py
tests/claude/: test_issue_task.py
tests/cli/: test_cli.py
tests/core/: test_agent.py  test_agent_events.py  test_agent_memory_select.py  test_api_endpoints.py  test_artifacts.py  test_auth.py  test_banking.py  test_chat_v2.py  test_coder.py  test_components.py  test_config.py  test_conversations.py  test_defaults.py  test_formatting.py  test_habitat_protocol.py  test_kbc.py  test_locks.py  test_main_lifespan.py  test_marcelmd.py  test_plugin.py  test_plugin_channels.py  test_rate_limit.py  test_redeploy.py  test_scaffold.py  test_sessions.py  test_settings.py  test_skill_loader.py  test_skills.py  test_storage.py  test_telegram.py  test_telegram_webhook.py  test_toolkit.py  test_toolkit_backcompat.py  test_uds_bridge.py  test_uds_integrations.py  test_uds_toolkit.py  test_watchdog.py
tests/harness/: __init__.py  test_agent.py  test_context.py  test_model_chain.py  test_oauth.py  test_prompt_cleanup.py  test_runner.py  test_tier_classifier.py  test_turn_router.py
tests/jobs/: test_cache_templates.py  test_cleanup.py  test_dispatch_types.py  test_executor.py  test_executor_scenarios.py  test_habitat_jobs.py  test_jobs_crud.py  test_scheduler.py  test_scheduler_rebuild.py  test_scheduler_scenarios.py  test_tool_scenarios.py
tests/memory/: __init__.py  test_compactor.py  test_conversation.py  test_history.py  test_pastes.py  test_selector.py  test_summarizer.py
tests/tools/: __init__.py  test_browser_tools.py  test_charts.py  test_claude_code.py  test_core_tools.py  test_delegate.py  test_integration_tools.py  test_marcel_tool.py  test_news.py  test_rss.py  test_web_backends.py  test_web_dispatcher.py  test_web_search_brave.py  test_web_search_duckduckgo.py  test_web_search_failover.py  test_web_search_formatter.py
(+399 files in other folders)
