[project]
name = "marcel"
description = "A self-adapting agent build on top of claude-code that can rewrite itself."
readme = "README.md"
license = {text = "MIT"}
version = "2.7.0"
authors = [
    { name="Shaun Bundervoet", email = "shaun.bundervoet@me.com"},
]
requires-python = ">=3.11,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic-ai-slim[anthropic,openai]>=1.79.0",
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.42.0",
    "python-dotenv>=1.2.0",
    "pydantic-settings>=2.13.0",
    "httpx>=0.28.0",
    "caldav>=3.1.0",
    "vobject>=0.9.9",
    "cryptography>=46.0.0",
    "PyJWT>=2.12.0",
    "croniter>=6.0.0",
    "matplotlib>=3.10.0",
    "opentelemetry-sdk>=1.39.0",
    "opentelemetry-exporter-otlp-proto-http>=1.39.0",
    "openinference-instrumentation-pydantic-ai>=0.1.12",
]

[project.optional-dependencies]
browser = ["playwright>=1.40.0"]

# Local package sources for editable installation
[tool.uv.sources]

[project.urls]
Homepage = "https://github.com/shbunder/marcel"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marcel_core"]

[tool.uv]
package = true
default-groups = ["dev", "lint", "docs"]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-examples>=0.0.18",
    "pytest-mock>=3.14.0",
    "pytest-pretty>=1.3.0",
    "pytest-recording>=0.13.2",
    "pre-commit<4.0.0,>=3.6.2",
    "respx>=0.21.0",
    "playwright>=1.40.0",
]
lint = [
    "pyright>=1.1.408",
    "ruff>=0.14.14"
]
docs = [
    "black>=24.10.0",
    "mkdocs>=1.6.1",
    "mkdocs-material[imaging]>=9.5.45",
    "mkdocstrings-python>=1.12.2",
]

[tool.ruff]
exclude = [
    "*.egg",
    "*.egg-info",
    ".__pycache__",
    ".eggs",
    ".git",
    ".idea",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    ".vscode",
    "build",
    "dist",
    "docs",
    "notebooks",
    "resources",
    "target",
]

target-version = "py312"
line-length = 120

[tool.ruff.lint]
# you can see the looong list of rules here:
# https://docs.astral.sh/ruff/rules/
# here's a couple to start with
select = [
    "A",    # warn about shadowing built-ins
    "E",    # style stuff, whitespaces
    "F",    # important pyflakes lints
    "I",    # import sorting
    "N",    # naming
    "T100", # breakpoints (probably don't want these in prod!)
]

ignore = [
    "A001", 	# builtin-shadowing
    "A002", 	# builtin-shadowing
    "E203", 	# whitespace-before-punctuation
    "F403", 	# import-star-used
    "E402",     # module-level-import-not-at-top (load_dotenv must run before app imports)
    "E501",     # line-too-long
    "E701", 	# multiple-statements-on-one-line-colon
    "E702", 	# multiple-statements-on-one-line-semicolon
    "E703", 	# useless-semicolon
    "E712", 	# comparison-to-singleton
    "E721", 	# type-comparison
    "N802", 	# function-name-snake-case
    "N803", 	# argument-name-snake-case
    "N806", 	# variable-in-function,
    "N815", 	# mixed-case-variable-in-class
    "N812",     # lowercase-imported-as-non-lowercase
    "N818", 	# error-suffix-for-exceptions
    "D100",     # ignore missing docstring in module
    "D102",     # ignore missing docstring in public method
    "D104",     # ignore missing docstring in public package
    "D105",     # ignore missing docstring in magic methods
    "D107",     # ignore missing docstring in __init__ methods
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["backend", "cli"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# don't format python in docstrings, pytest-examples takes care of it
docstring-code-format = false
quote-style = "single"

[tool.pytest.ini_options]
# Direct `pythonpath` manipulation generally requires `pytest-pythonpath`
# Alternatively, manage with `conftest.py` as previously described.
pythonpath = [
    "./src/",
]
testpaths = ["tests"]

asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
omit = [
    "*/watchdog/main.py",
    "*/skills/install_skills.py",
    "*/skills/integrations/banking/client.py",
    "*/skills/integrations/banking/__init__.py",
    "*/skills/integrations/banking/sync.py",
    "*/skills/integrations/icloud/client.py",
    "*/skills/integrations/icloud/__init__.py",
    "*/skills/integrations/docker/__init__.py",
    "*/skills/tool.py",
    "*/browser/manager.py",
    "*/browser/tools.py",
    "*/browser/__init__.py",
    "*/main.py",
]

[tool.coverage.report]
fail_under = 90

[tool.pyright]
pythonVersion = "3.12"
reportMissingTypeStubs = false
reportUnnecessaryIsInstance = false
reportUnnecessaryTypeIgnoreComment = true
reportMissingModuleSource = false
venvPath = '.'
venv = ".venv"
exclude = [
    "**/.venv",
    "**/venv",
    "**/__pycache__",
    "**/.build",
    "**/node_modules",
    "**/*.egg-info",
]
